# clean-2048

./: .gitignore  CMakeLists.txt  README.md
common/: CMakeLists.txt
common/include/common/: Model.h  ModelHelper.h  NonCopyable.h
common/tests/: CMakeLists.txt  ModelTests.cpp
console_2048/: CMakeLists.txt
console_2048/src/: main.cpp
console_ui/: CMakeLists.txt  main.cpp
console_ui/include/console_ui/: Application.h
console_ui/src/: Application.cpp  BoardView.cpp  BoardView.h  ControlView.h  ScoreView.h
console_ui/tests/: BoardViewTests.cpp  CMakeLists.txt  ScoreViewTests.cpp
entity/: CMakeLists.txt
entity/include/entity/: Board.h  Score.h
entity/src/: Board.cpp  Score.cpp
entity/tests/: BoardTests.cpp  CMakeLists.txt  ScoreTests.cpp
integration_tests/: CMakeLists.txt
integration_tests/src/: UseCaseTests.cpp
presenter/: CMakeLists.txt
presenter/include/presenter/: BoardPresenter.h  Controller.h  GameOverPresenter.h  Router.h  ScorePresenter.h
presenter/src/: BoardPresenter.cpp  Controller.cpp  GameOverPresenter.cpp  GetRouter.h  Router.cpp  ScorePresenter.cpp
qml_2048/: CMakeLists.txt
qml_2048/src/: main.cpp  main_simulator.cpp  qml.qrc
qml_2048/src/qml/: Board.qml  Button.qml  Cell.qml  GameOverView.qml  Main.qml  ScoreBoard.qml
qml_ui/: CMakeLists.txt
qml_ui/src/: BoardViewModel.cpp  BoardViewModel.h  main.cpp  qml.qrc
qml_ui/src/qml/: Board.qml  Cell.qml  GameOverWnd.qml  ScoreBoard.qml  logic.js  main.qml
qt_view_model/: CMakeLists.txt
qt_view_model/include/qt_view_model/: BoardViewModel.h  Controller.h  GameOverViewModel.h  ScoreViewModel.h
qt_view_model/src/: BoardViewModel.cpp  Controller.cpp  GameOverViewModel.cpp  ScoreViewModel.cpp
qwidget_2048/: CMakeLists.txt
qwidget_2048/src/: BoardView.cpp  BoardView.h  CellView.cpp  CellView.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
qwidget_ui/: CMakeLists.txt
qwidget_ui/src/: BoardView.cpp  BoardView.h  CellView.cpp  CellView.h  CellView.ui  GameView.cpp  GameView.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
router/: CMakeLists.txt
router/include/router/: Router.h
storage/: CMakeLists.txt
storage/include/storage/: Storage.h
storage/src/: Storage.cpp
storage/tests/: CMakeLists.txt  StorageTests.cpp
use_case/: CMakeLists.txt
use_case/include/use_case/: BoardPresenter.h  Facade.h  GameOverPresenter.h  GamePlay.h  GamePlayUseCase.h  GameStorage.h  GameStorageUseCase.h  Model.h  Random.h  ScorePresenter.h  Storage.h
use_case/src/: Facade.cpp  Game.cpp  Game.h  Random.cpp  RandomImpl.h
use_case/tests/: CMakeLists.txt  GameTests.cpp  RandomTests.cpp
use_case_interface/: CMakeLists.txt
use_case_interface/include/use_case_interface/: BoardPresenter.h  GameOverPresenter.h  GamePlay.h  GameStorage.h  Random.h  ScorePresenter.h  Storage.h
